--- a/index.html
+++ b/index.html
@@ -1,105 +1,61 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="images/favicon.ico">
+    <link href="https://fonts.googleapis.com/css2?family=Dawning+of+a+New+Day&family=Gloria+Hallelujah&family=Lobster&family=Sacramento&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Sacramento&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@300&family=Courgette&family=Sacramento&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@300&family=Courgette&family=Josefin+Sans:wght@100&family=Lato&family=Sacramento&display=swap" rel="stylesheet">
+    </head>
+  <body>
+    <div class="top-container">
+      <img class="cloud2"src="images/cloud.png" alt="cloud">
+      <h1>I'm Satyaraj</h1>
+      <p class="subh">a programmar</p>
+      <img class="cloud1"src="images/cloud.png" alt="cloud">
+      <img height="420px"src="images/mountain.png" alt="mount">
+    </div>
+    <div class="middle-container">
+      <div class="profile">
 
-<head>
-  <meta charset="utf-8">
-  <title>Satyaraj's Website</title>
-  <link rel="stylesheet" href="CSS/styles.css">
+        <img class="happy"height="200px"src="images/happy.png" alt="">
+        <h2 class="hello">Hello</h2>
+        <p class="iam">I am a web developer studying at IIT Roorkee. <br>I play Badminton and also love to game!</p>
+      </div>
+      <hr class="line1">
+      <div class="skills">
+        <h2 class="hello">My Skills</h2><br>
+        <div class="skill-row1">
 
+          <iframe class="giphy-embed1"src="https://giphy.com/embed/qgQUggAC3Pfv687qPC"   frameBorder="0"  allowFullScreen></iframe>
+          <h3 class="h3">Web Development</h3>
+          <p class="webd">I am a beginner Web Developer and can work with intermediate HTML and CSS.</p><br>
+          </div>
+        <div class="skill-row2">
 
-</head>
-
-<body >
-
-<table cellspacing = "50">
-  <tr>
-    <td>  <img src="pp-modified.png" alt="My pic"></td>
-    <td><h1>Satyaraj Rana</h1>
-    <p><i>Student at <strong>IITR</strong></i></p>
-    <p>Satyaraj Rana cleared his JEE Advenced examination in 2021 <br>and got into IITR and is currently studying Metallurgy in IITR</p></td>
-  </tr>
-</table>
-
-
-  <strong>  <i><a href="https://www.divicast.com/"target="_blank">This is where he watches movies</a></i></strong>
-  <hr >
-  <h2>Books Read</h2>
-  <ul>
-    <li><h3>Fiction</h3></li>
-    <ol type = "I">
-      <li>Sherlock Holmes</li>
-      <li>Robin Hood</li>
-    </ol>
-    <li><h3>Biography</h3></li>
-    <ul>
-      <li>Steve Jobs</li>
-    </ul>
-
-  </ul>
-  <a href="hobbies.html" >Here are some of his hobbies</a>
-  <hr >
-  <h2>Experience:</h2>
-  <table  cellspacing = "10   " >
-    <thead>
-      <tr>
-        <th>Year</th>
-        <th>Work</th>
-        <th>Place</th>
-      </tr>
-    </thead>
-    <tr>
-      <td>2010-2018</td>
-      <td>Schooling</td>
-      <td>RHK</td>
-    </tr>
-    <tr>
-      <td>2019-2021</td>
-      <td>JEE prep</td>
-      <td>Bothra Classes</td>
-    </tr>
-    <tr>
-      <td>2022-2025</td>
-      <td>College</td>
-      <td>IIT Roorkee</td>
-    </tr>
-  </table>
-  <hr >
-  <h2>Skills</h2>
-  <table >
-    <tr>
-      <td><table cellspacing = "10">
-        <tr>
-          <td>Drawing</td>
-          <td>&#11088;&#11088;&#11088;&#11088;</td>
-        </tr>
-      </table></td>
-      <td><table cellspacing = "10">
-        <tr>
-          <td>Web-D</td>
-          <td>&#11088;</td>
-        </tr>
-      </table></td>
-    </tr>
-    <tr>
-      <td><table cellspacing = "10">
-        <tr>
-          <td>Sports</td>
-          <td>&#11088;&#11088;&#11088;&#11088;</td>
-        </tr>
-      </table></td>
-      <td><table cellspacing = "10">
-        <tr>
-          <td>Gaming</td>
-          <td>&#11088;&#11088;&#11088;&#11088;&#11088;</td>
-        </tr>
-      </table></td>
-
-    </tr>
-  </table>
-  <hr >
-<a href="application.html">CLick here to send an application</a>
+          <iframe class="giphy-embed2"src="https://giphy.com/embed/xT9IgzoKnwFNmISR8I"   frameBorder="0" ></iframe>
+          <h3 class="h3">Competetive Programming</h3>
+          <p class="webd">I have a decent knowledge of C and C++ with <br>sound info about OOP.</p>
+          </div>
+      </div>
+      <hr class="line1">
+      <div class="contact-me">
+        <h2 class="hello">Get In Touch</h2>
+        <h3 class="h3b">I would love to talk about a cool project!</h3>
+        <p class="webd2">If you wanna contact, you can mail me by clicking on Contact Me below.</p><br>
+        <a class="btn" href="mailto:ranasatyaraj7103iitr@gmail.com">CONTACT ME</a>
+      </div>
+    </div>
 
 
-</body>
+    <div class="bottom-container">
+      <a class="footer-link" href="https://www.linkedin.com/" target="_blank">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/" target="_blank">Twitter</a>
+      <a class="footer-link" href="https://www.appbrewery.co/" target="_blank">Website</a>
+    </div>
 
+  </body>
 </html>
